--- a/kashmir.info.yml
+++ b/kashmir.info.yml
@@ -2,3 +2,12 @@ name: Kashmir
 description: A base theme for modern tooling.
 type: theme
 core: 8.x
+base theme: stable
+
+regions:
+  header: Header
+  content: Content
+  sidebar: Sidebar
+  footer: Footer
+
+
