KMR: Update config and patternlab task.

--- a/kashmir.info.yml
+++ b/kashmir.info.yml
@@ -1,5 +1,5 @@
 name: Kashmir
-description: A base theme for modern tooling.
+description: A base theme with modern tooling.
 type: theme
 core: 8.x
 base theme: stable
@@ -10,4 +10,19 @@ regions:
   sidebar: Sidebar
   footer: Footer
 
-
+component-libraries:
+  atoms:
+    paths:
+      - components/_patterns/00-atoms
+  molecules:
+    paths:
+      - components/_patterns/01-molecules
+  organisms:
+    paths:
+      - components/_patterns/02-organisms
+  templates:
+    paths:
+      - components/_patterns/03-templates
+  pages:
+    paths:
+      - components/_patterns/04-pages
