--- a/kashmir.info.yml
+++ b/kashmir.info.yml
@@ -1,5 +1,5 @@
 name: Kashmir
-description: A base theme with modern tooling.
+description: A sub-theme with modern tooling.
 type: theme
 core: 8.x
 base theme: stable
