KMR: Add new tasks, update docs, update folder structure.

--- a/kashmir.info.yml
+++ b/kashmir.info.yml
@@ -10,6 +10,10 @@ regions:
   sidebar: Sidebar
   footer: Footer
 
+libraries:
+  - kashmir/reset
+  - kashmir/global
+
 # component-libraries:
 #   atoms:
 #     paths:
