--- a/package.json
+++ b/package.json
@@ -7,21 +7,27 @@
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.25.0",
     "babel-preset-es2015": "^6.24.1",
+    "breakpoint-sass": "^2.7.1",
     "browser-sync": "^2.18.13",
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-eslint": "^4.0.0",
     "gulp-notify": "^3.0.0",
+    "gulp-parker": "^0.1.4",
     "gulp-plumber": "^1.1.0",
     "gulp-postcss": "^7.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
+    "gulp-sass-glob": "^1.0.8",
     "gulp-sass-variables": "^1.1.1",
     "gulp-sourcemaps": "^2.6.0",
     "gulp-stylelint": "^4.0.0",
+    "gulp-svgstore": "^6.1.0",
     "gulp-uglify": "^3.0.0",
     "gulp-util": "^3.0.8",
-    "stylelint-config-standard": "^17.0.0",
-    "stylelint-scss": "^2.0.1"
+    "normalize.scss": "^0.1.0",
+    "sass-direction": "^1.1.0",
+    "sass-toolkit": "^2.10.2",
+    "stylelint-config-standard": "^17.0.0"
   },
   "scripts": {
     "postinstall": "rm -rf patternlab && composer create-project -n pattern-lab/edition-drupal-standard patternlab && php patternlab/core/console -c --set twigAutoescape=0 && php patternlab/core/console -c --set sourceDir=../components && rm -rf patternlab/source"
