--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
   "name": "kashmir",
   "version": "1.0.0",
-  "description": "",
+  "description": "A Drupal theme with modern tooling.",
   "main": "config.js",
   "dependencies": {
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.25.0",
+    "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
     "breakpoint-sass": "^2.7.1",
     "browser-sync": "^2.18.13",
     "gulp": "github:gulpjs/gulp#4.0",
+    "gulp-babel": "^7.0.0",
     "gulp-eslint": "^4.0.0",
     "gulp-notify": "^3.0.0",
     "gulp-parker": "^0.1.4",
@@ -24,14 +26,16 @@
     "gulp-svgstore": "^6.1.0",
     "gulp-uglify": "^3.0.0",
     "gulp-util": "^3.0.8",
+    "husky": "^0.14.3",
     "normalize.scss": "^0.1.0",
     "sass-direction": "^1.1.0",
     "sass-toolkit": "^2.10.2",
     "stylelint-config-standard": "^17.0.0"
   },
   "scripts": {
-    "postinstall": "rm -rf patternlab && composer create-project -n pattern-lab/edition-drupal-standard patternlab && php patternlab/core/console -c --set twigAutoescape=0 && php patternlab/core/console -c --set sourceDir=../components && rm -rf patternlab/source",
-    "precommit": "gulp styles-lint && gulp scripts-lint"
+    "patternlab": "rm -rf patternlab && composer create-project -n pattern-lab/edition-drupal-standard patternlab && php patternlab/core/console -c --set twigAutoescape=0 && php patternlab/core/console -c --set sourceDir=../components && rm -rf patternlab/source",
+    "precommit": "gulp lint --type production",
+    "postinstall": "find node_modules/ -name '*.info' -type f -delete"
   },
   "repository": {
     "type": "git",
@@ -43,10 +47,5 @@
   "bugs": {
     "url": "https://github.com/skippednote/kashmir/issues"
   },
-  "homepage": "https://github.com/skippednote/kashmir#readme",
-  "devDependencies": {
-    "babel-preset-env": "^1.6.0",
-    "gulp-babel": "^7.0.0",
-    "husky": "^0.14.3"
-  }
+  "homepage": "https://github.com/skippednote/kashmir#readme"
 }
