--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "babel-preset-es2015": "^6.24.1",
     "breakpoint-sass": "^2.7.1",
     "browser-sync": "^2.18.13",
+    "eslint": "^4.8.0",
+    "eslint-config-airbnb": "^15.1.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-react": "^7.4.0",
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-babel": "^7.0.0",
     "gulp-eslint": "^4.0.0",
