--- a/kashmir.libraries.yml
+++ b/kashmir.libraries.yml
@@ -1,11 +1,4 @@
-global:
-  version: VERSION
-  css:
-    theme:
-      dist/css/global.ltr.css: {}
-  js:
-    dist/global.js: {}
-
+# Empty library added for overriding libraries cache.
 ltr:
   version: VERSION
   css:
@@ -16,3 +9,11 @@ reset:
   css:
     base:
       dist/css/reset.css: {}
+
+global:
+  version: VERSION
+  css:
+    theme:
+      dist/css/global.ltr.css: {}
+  js:
+    dist/global.js: {}
