KMR: Add prettier support for JS.

--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "browser-sync": "^2.18.13",
     "eslint": "^4.8.0",
     "eslint-config-airbnb": "^15.1.0",
+    "eslint-config-prettier": "^2.6.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-prettier": "^2.3.1",
     "eslint-plugin-react": "^7.4.0",
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-babel": "^7.0.0",
@@ -33,6 +35,8 @@
     "gulp-util": "^3.0.8",
     "husky": "^0.14.3",
     "normalize.scss": "^0.1.0",
+    "prettier": "^1.7.4",
+    "prettier-eslint": "^8.2.0",
     "sass-direction": "^1.1.0",
     "sass-toolkit": "^2.10.2",
     "stylelint-config-standard": "^17.0.0"
