--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,6 @@
 {
-  "extends": "eslint-config-airbnb",
+  "extends": ["eslint-config-airbnb", "prettier"],
+  "plugins": ["prettier"],
   "root": true,
   "env": {
     "browser": true,
@@ -23,18 +24,24 @@
     "no-underscore-dangle": [0],
     "max-nested-callbacks": [1, 3],
     "no-mutable-exports": "off",
-    "no-plusplus": [1, {
-      "allowForLoopAfterthoughts": true
-    }],
+    "no-plusplus": [
+      1,
+      {
+        "allowForLoopAfterthoughts": true
+      }
+    ],
     "no-param-reassign": [0],
     "no-prototype-builtins": [0],
-    "valid-jsdoc": [1, {
-      "prefer": {
-        "returns": "return",
-        "property": "prop"
-      },
-      "requireReturn": false
-    }],
+    "valid-jsdoc": [
+      1,
+      {
+        "prefer": {
+          "returns": "return",
+          "property": "prop"
+        },
+        "requireReturn": false
+      }
+    ],
     "brace-style": ["error", "stroustrup"],
     "no-unused-vars": [1]
   }
