--- a/package.json
+++ b/package.json
@@ -4,42 +4,43 @@
   "description": "A Drupal theme with modern tooling.",
   "main": "config.js",
   "dependencies": {
-    "autoprefixer": "^7.1.2",
+    "autoprefixer": "^9.3.1",
     "babel-core": "^6.25.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
     "breakpoint-sass": "^2.7.1",
     "browser-sync": "^2.18.13",
-    "eslint": "^4.8.0",
-    "eslint-config-airbnb": "^15.1.0",
-    "eslint-config-prettier": "^2.6.0",
+    "eslint": "^5.9.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^3.3.0",
     "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-jsx-a11y": "^5.1.1",
-    "eslint-plugin-prettier": "^2.3.1",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-react": "^7.4.0",
-    "gulp": "github:gulpjs/gulp#4.0",
-    "gulp-babel": "^7.0.0",
-    "gulp-eslint": "^4.0.0",
+    "gulp": "git://github.com/gulpjs/gulp.git#v4.0.0",
+    "gulp-babel": "^8.0.0",
+    "gulp-eslint": "^5.0.0",
     "gulp-notify": "^3.0.0",
     "gulp-parker": "^0.1.4",
     "gulp-plumber": "^1.1.0",
-    "gulp-postcss": "^7.0.0",
+    "gulp-postcss": "^8.0.0",
     "gulp-rename": "^1.2.2",
-    "gulp-sass": "^3.1.0",
+    "gulp-sass": "^4.0.2",
     "gulp-sass-glob": "^1.0.8",
     "gulp-sass-variables": "^1.1.1",
     "gulp-sourcemaps": "^2.6.0",
-    "gulp-stylelint": "^4.0.0",
-    "gulp-svgstore": "^6.1.0",
+    "gulp-stylelint": "^8.0.0",
+    "gulp-svgstore": "^7.0.0",
     "gulp-uglify": "^3.0.0",
     "gulp-util": "^3.0.8",
-    "husky": "^0.14.3",
+    "husky": "^1.1.3",
     "normalize.scss": "^0.1.0",
     "prettier": "^1.7.4",
     "prettier-eslint": "^8.2.0",
     "sass-direction": "^1.1.0",
     "sass-toolkit": "^2.10.2",
-    "stylelint-config-standard": "^17.0.0"
+    "stylelint": "^9.8.0",
+    "stylelint-config-standard": "^18.2.0"
   },
   "scripts": {
     "patternlab": "rm -rf patternlab && composer create-project -n pattern-lab/edition-drupal-standard patternlab && php patternlab/core/console -c --set twigAutoescape=0 && php patternlab/core/console -c --set sourceDir=../components && rm -rf patternlab/source",
