--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-prettier": "^2.3.1",
     "eslint-plugin-react": "^7.4.0",
-    "gulp": "github:gulpjs/gulp#4.0",
+    "gulp": "git://github.com/gulpjs/gulp.git#v4.0.0",
     "gulp-babel": "^7.0.0",
     "gulp-eslint": "^4.0.0",
     "gulp-notify": "^3.0.0",
@@ -25,7 +25,7 @@
     "gulp-plumber": "^1.1.0",
     "gulp-postcss": "^7.0.0",
     "gulp-rename": "^1.2.2",
-    "gulp-sass": "^3.1.0",
+    "gulp-sass": "^3.2.1",
     "gulp-sass-glob": "^1.0.8",
     "gulp-sass-variables": "^1.1.1",
     "gulp-sourcemaps": "^2.6.0",
