--- a/kashmir.breakpoints.yml
+++ b/kashmir.breakpoints.yml
@@ -1,28 +1,21 @@
-kashmir.thumb:
-  label: Thumb
-  mediaQuery: 'all and (min-width: 0 and max-width: 30rem)'
+kashmir.mobile:
+  label: Mobile
+  mediaQuery: 'all and (min-width: 0 and max-width: 768px)'
   weight: 0
   multipliers:
     - 1x
     - 2x
-kashmir.palm:
-  label: Palm
-  mediaQuery: 'all and (min-width: 30.0625rem) and (max-width: 47.9375rem)'
+kashmir.tablet:
+  label: Tablet
+  mediaQuery: 'all and (min-width: 769px) and (max-width: 1024px)'
   weight: 1
   multipliers:
     - 1x
     - 2x
-kashmir.lap:
-  label: Lap
-  mediaQuery: 'all and (min-width: 48rem) and (max-width: 64rem)'
+kashmir.desktop:
+  label: Desktop
+  mediaQuery: 'all and (min-width: 1024px)'
   weight: 2
-  multipliers:
-    - 1x
-    - 2x
-kashmir.desk:
-  label: Desk
-  mediaQuery: 'all and (min-width: 64.0625rem)'
-  weight: 3
   multipliers:
     - 1x
     - 2x
